--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@web3-react/core": "^8.2.0",
+    "@ethersproject/units": "^5.6.0",
+    "@ethersproject/bignumber": "^5.6.0",
+    "@web3-react/metamask": "^8.2.1",
+    "@metamask/detect-provider": "^1.2.0",
+    "@web3-react/types": "^8.2.0",
+    "@web3-react/store": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
