--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/bignumber": "^5.6.0",
+    "@ethersproject/units": "^5.6.0",
+    "@metamask/detect-provider": "^1.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,24 +13,23 @@
     "@types/node": "^16.18.66",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@web3-react/core": "^8.2.0",
+    "@web3-react/metamask": "^8.2.1",
+    "@web3-react/store": "^8.2.0",
+    "@web3-react/types": "^8.2.0",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@web3-react/core": "^8.2.0",
-    "@ethersproject/units": "^5.6.0",
-    "@ethersproject/bignumber": "^5.6.0",
-    "@web3-react/metamask": "^8.2.1",
-    "@metamask/detect-provider": "^1.2.0",
-    "@web3-react/types": "^8.2.0",
-    "@web3-react/store": "^8.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
